added the added user form

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "no-console": "off"
     }
   },
   "postcss": {
